se quito el titulo de mision y vision, tambien se organizo con flex para que las imagenes estuvieran centradas verticalmente

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="icon" href="src/img/icon.jpg" />
         <title>PQRSF</title>
     </head>
     <body>
@@ -103,9 +104,18 @@
         </section>
         <section class="bg-light" id="mision">
             <section class="container p-5 px-4">
-                <section class="row gx-4 justify-content-center">
-                    <section class="col-lg-8">
-                        <h2>Mision</h2>
+                <section class="d-flex gx-4 justify-content-center">
+                    <section>
+                        <img
+                            src="src/img/mision.png"
+                            alt="mision"
+                            width="300"
+                        />
+                    </section>
+                    <section
+                        id="mision-p"
+                        class="col-lg-8 d-flex flex-column justify-content-center"
+                    >
                         <p class="lead">
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit. Aut optio velit inventore, expedita quo
@@ -119,9 +129,11 @@
         </section>
         <section id="vision">
             <section class="container p-5 px-4">
-                <section class="row gx-4 justify-content-center">
-                    <section class="col-lg-8">
-                        <h2>Vision</h2>
+                <section class="d-flex gx-4 justify-content-center">
+                    <section
+                        id="vision-p"
+                        class="d-flex flex-column justify-content-center col-lg-8"
+                    >
                         <p class="lead">
                             Lorem ipsum dolor sit amet, consectetur adipisicing
                             elit. Vero odio fugiat voluptatem dolor, provident
@@ -129,6 +141,13 @@
                             beatae magnam et repudiandae ipsa exercitationem,
                             in, quo totam.
                         </p>
+                    </section>
+                    <section>
+                        <img
+                            src="src/img/vision.png"
+                            alt="vision"
+                            width="300"
+                        />
                     </section>
                 </section>
             </section>
