--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
             integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
             crossorigin="anonymous"
         />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+            crossorigin="anonymous"
+        ></script>
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="icon" href="src/img/icon.jpg" />
         <title>PQRSF</title>
@@ -104,7 +109,7 @@
         </section>
         <section class="bg-light" id="mision">
             <section class="container p-5 px-4">
-                <section class="d-flex gx-4 justify-content-center">
+                <section class="d-flex gx-4 justify-content-center flex-wrap">
                     <section>
                         <img
                             src="src/img/mision.png"
@@ -129,7 +134,7 @@
         </section>
         <section id="vision">
             <section class="container p-5 px-4">
-                <section class="d-flex gx-4 justify-content-center">
+                <section class="d-flex gx-4 justify-content-center flex-wrap">
                     <section
                         id="vision-p"
                         class="d-flex flex-column justify-content-center col-lg-8"
@@ -329,10 +334,5 @@
                 Copyright &copy; <strong>D&L PANAS</strong> - 2022
             </p>
         </footer>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-            crossorigin="anonymous"
-        ></script>
     </body>
 </html>
