--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
             crossorigin="anonymous"
         ></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+        />
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="icon" href="src/img/icon.jpg" />
-        <title>PQRSF</title>
+        <title>VIDA PLENA I.P.S</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
             <section class="container">
-                <a class="navbar-brand" href="#">Your PQRSF now!</a>
+                <a class="navbar-brand" href="#"
+                    ><i class="bi bi-hospital"></i> VIDA PLENA I.P.S</a
+                >
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -48,16 +54,31 @@
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#mision">Mision</a>
+                            <a class="nav-link" href="#mision"
+                                ><i class="bi bi-lightbulb"></i> Misión</a
+                            >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#vision">Vision</a>
+                            <a class="nav-link" href="#vision"
+                                ><i class="bi bi-eye"></i> Visión</a
+                            >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#pqrsf">PQRSF</a>
+                            <a class="nav-link" href="#valores"
+                                ><i class="bi bi-puzzle"></i> Valores</a
+                            >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contacts">Contactos</a>
+                            <a class="nav-link" href="#pqrsf"
+                                ><i class="bi bi-file-earmark-medical"></i>
+                                PQRSF</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contacts"
+                                ><i class="bi bi-person-square"></i>
+                                Contactos</a
+                            >
                         </li>
                     </ul>
                 </section>
@@ -65,42 +86,35 @@
         </nav>
         <header id="main-header" class="d-flex align-items-center text-white">
             <section class="container p-5 px-4 text-center">
-                <h1 class="fw-bolder">Welcome to Your PQRSF now!</h1>
-                <p class="lead">
-                    A functional Bootstrap 5 boilerplate for one page scrolling
-                    websites
-                </p>
-                <a class="btn btn-lg btn-light" href="#about">Start now!</a>
+                <h1 class="fw-bolder display-2">VIDA PLENA I.P.S</h1>
+                <p class="lead">VIVE LA VIDA PLENA</p>
+                <a class="btn btn-lg btn-outline-light" href="#about"
+                    ><i class="bi bi-arrow-down"></i>¡Comencemos!
+                    <i class="bi bi-arrow-down"></i
+                ></a>
             </section>
         </header>
         <section id="about">
-            <section class="container p-5 px-4">
+            <section class="container-fluid p-5 px-4">
                 <section class="row gx-4 justify-content-center">
                     <section class="col-lg-8">
-                        <h2 class="text-center">About this page</h2>
-                        <p class="lead">
-                            This is a great place to talk about your webpage.
-                            This template is purposefully unstyled so you can
-                            use it as a boilerplate or starting point for you
-                            own landing page designs! This template features:
+                        <h2 class="text-center display-5">
+                            Acerca de <strong>VIDA PLENA Y I.P.S</strong>
+                        </h2>
+                        <p class="lead text-center">
+                            Cuenta con personal calificado y la tecnología
+                            necesaria para realizar terapias de soporte renal al
+                            paciente críticamente enfermo, así como al paciente
+                            que requiera manejo de su enfermedad renal.
                         </p>
-                        <ul>
-                            <li>
-                                Clickable nav links that smooth scroll to page
-                                sections
+                        <br />
+                        <h3 class="text-center">Tratamientos:</h3>
+                        <ul class="text-center">
+                            <li class="list-unstyled">
+                                Hemodiálisis intermitente.
                             </li>
-                            <li>
-                                Responsive behavior when clicking nav links
-                                perfect for a one page website
-                            </li>
-                            <li>
-                                Bootstrap's scrollspy feature which highlights
-                                which section of the page you're on in the
-                                navbar
-                            </li>
-                            <li>
-                                Minimal custom CSS so you are free to explore
-                                your own unique design options
+                            <li class="list-unstyled">
+                                Diálisis peritoneal automatizada y manual.
                             </li>
                         </ul>
                     </section>
@@ -121,7 +135,7 @@
                         id="mision-p"
                         class="col-lg-8 d-flex flex-column justify-content-center"
                     >
-                        <p class="lead">
+                        <p class="lead text-justify">
                             Brindar a toda la comunidad la mejor atención medica
                             basada en la evidencia científica y contenido ético,
                             acompañando al paciente y su familia.
@@ -137,10 +151,11 @@
                         id="vision-p"
                         class="d-flex flex-column justify-content-center col-lg-8"
                     >
-                        <p class="lead">
-                            Contribuir a mejorar el nivel de salud y la calidad
-                            de vida de la población a través de la prestación de
-                            servicios de salud.
+                        <p class="lead text-justify">
+                            En un periodo aproximado de 2 años seremos
+                            reconocidos a nivel Colombia como una de las IPS con
+                            el mejor plan de promoción y prevención ya que este
+                            será eficaz, eficiente y efectivo.
                         </p>
                     </section>
                     <section>
@@ -152,6 +167,30 @@
                     </section>
                 </section>
             </section>
+        </section>
+        <section id="valores" class="container-fluid bg-dark p-5 text-center">
+            <h3 class="text-center text-light display-1">NUESTROS VALORES</h3>
+            <section id="valores-section">
+                <section class="bg-info text-uppercase text-light p-3 rounded">
+                    responsabilidad
+                </section>
+                <section class="bg-info text-uppercase text-light p-3 rounded">
+                    respeto
+                </section>
+                <section class="bg-info text-uppercase text-light p-3 rounded">
+                    empatia
+                </section>
+                <section class="bg-info text-uppercase text-light p-3 rounded">
+                    compromiso
+                </section>
+                <section class="bg-info text-uppercase text-light p-3 rounded">
+                    calidez humana
+                </section>
+                <section class="bg-info text-uppercase text-light p-3 rounded">
+                    trabajo en equipo
+                </section>
+            </section>
+            <img src="src/img/logo-sb.png" alt="logo" width="180px" />
         </section>
         <section id="pqrsf" class="container-fluid bg-info py-5">
             <section id="pqrsf-form" class="container bg-light p-5 rounded">
@@ -316,8 +355,8 @@
         <footer id="contacts" class="d-flex flex-column py-5 bg-dark">
             <section id="extra-contacts" class="container w-100">
                 <section class="m-0 text-center text-white">
-                    <h3>Location</h3>
-                    <p>2215 John Daniel Drive Clark, MO 65243</p>
+                    <h3>Dirección</h3>
+                    <p>Calle, 45C #21 - 36 - Chapinero</p>
                 </section>
                 <section class="m-0 text-center text-white">
                     <h3>Social media</h3>
@@ -343,12 +382,12 @@
                     >
                 </section>
                 <section class="m-0 text-center text-white">
-                    <h3>About us</h3>
-                    <p><strong>correo.de.contacto@ejemplo.com</strong></p>
+                    <h3>Contactanos</h3>
+                    <p><strong>contactos.info@vidaplenaips.com</strong></p>
                 </section>
             </section>
             <p class="pt-3 m-0 text-center text-white">
-                Copyright &copy; <strong>D&L PANAS</strong> - 2022
+                Copyright &copy;<strong>VIDA PLENA I.P.S</strong> - 2022
             </p>
         </footer>
         <script src="js/code.js"></script>
